# nabu

./: .gitignore  README.md  pyproject.toml
api/: api.py  database.db  models.py  prompts.py
app/: main.py
web/: app.py
