[project]
name = "nabu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.8",
    "openai>=1.64.0",
    "sqlmodel>=0.0.22",
    "streamlit>=1.42.2",
    "uvicorn[standard]>=0.34.0",
]
